--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "cross-env DEBUG=express-sequelize node ./bin/www",
     "test": "npm run test-unit && npm run test-integration",
+    "test-jenkins": "MOCHA_FILE=./jenkins-test-results.xml cross-env NODE_ENV=test ./node_modules/.bin/mocha test/**/*.test.js --reporter mocha-junit-reporter",
     "test-unit": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/unit/*.test.js",
     "test-integration": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/integration/*.test.js"
   },
@@ -26,6 +27,7 @@
     "cross-env": "^3.1.3",
     "expect.js": "^0.3.1",
     "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.17.0",
     "supertest": "^3.1.0"
   }
 }
